[package]
name = "tokio_chat_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full", "tracing"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1.8"
num_cpus = "1.16"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["test-util"] }

[features]
default = []
tracing = ["tokio/tracing"]