[package]
name = "tokio_chat_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bytes = "1.8"
num_cpus = "1.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full", "tracing"] }
console-subscriber = "0.2"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["test-util"] }
console-subscriber = "0.2"

[features]
default = []
tracing = ["tokio/tracing"]